se agrega correo al form de contacto

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap');
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -18,4 +20,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+}
+.text-desborde {
+  overflow: hidden; 
+white-space: nowrap; 
 }
